--- a/src/components/Month/Month.css
+++ b/src/components/Month/Month.css
@@ -1,3 +1,20 @@
 .Month{
-    border: 3px solid black;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 115%;
+    padding: 1.5em 0;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.Icon{
+    cursor: pointer;
+    transition: .15s ease-out;
+}
+
+.Icon:first-of-type {
+    margin-left: 1em;
+}
+
+.Icon:last-of-type {
+    margin-right: 1em;
 }
