--- a/src/components/UI/Icons/Icons.css
+++ b/src/components/UI/Icons/Icons.css
@@ -1,4 +1,4 @@
-.Icon {
+.Icons {
     font-family: 'Material Icons', serif;
     font-style: normal;
     display: inline-block;
@@ -16,26 +16,4 @@
     font-feature-settings: 'liga';
     padding-right: .25em;
     padding-left: .25em;
-}
-
-.Logo{
-    font-size: 175%;
-    text-align: center;
-    color: var(--main-color);
-    line-height: 1;
-}
-
-.Header {
-    display: block;
-    width: 100%;
-    padding: 1.75em 0;
-    border-bottom: 1px solid var(--border-color);
-    background: var(--neutral-color);
-}
-
-.Main{
-    display: block;
-    margin: 0 auto;
-    margin-top: 5em;
-    max-width: 50em;
 }
