--- a/src/containers/Calendar/Calendar.css
+++ b/src/containers/Calendar/Calendar.css
@@ -4,4 +4,6 @@
     width: 100%;
     background: var(--neutral-color);
     border: 1px solid var(--border-color);
+    border-bottom: 0px;
+    margin-bottom: 0.75rem;
 }
