--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Nunito:300,400,700);
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 
 :root {
-    --main-color: #1a8fff;
-    --text-color: #777;
-    --text-color-light: #ccc;
-    --border-color: #eee;
+    --main-color: #0b58a0;
+    --text-color: #000e1c;
+    --text-color-light: rgb(170, 169, 169);
+    --border-color: #222a33;
     --bg-color: #f9f9f9;
     --neutral-color: #fff;
 }
@@ -13,11 +13,15 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Nunito', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     font-size: 1em;
     font-weight: 300;
     line-height: 1.5;
     color: var(--text-color);
     background: var(--bg-color);
     position: relative;
+}
+
+*{
+    box-sizing: border-box;
 }
